fixed portfolio side large type on the phone view, it was way too big

--- a/css/_queries.scss
+++ b/css/_queries.scss
@@ -61,10 +61,8 @@
     padding-top: 5%;
   }
   .callout{
-    h3{
-      font-size:3.25rem;
-      font-weight:700;
-      line-height:1.15em;
+    h1{
+      font-size:3rem;
     }
     span{
       font-size:1rem;
